Polish 1eed5a30c3586bb5e5eedd7930ac1e62ebef6cef
* Fix section levels
* Fix typos in code examples
* Minor updates

--- a/spring-batch-docs/asciidoc/index.adoc
+++ b/spring-batch-docs/asciidoc/index.adoc
@@ -17,9 +17,9 @@ of the Batch domain language.
 administration.
 <<step.adoc#configureStep,Configuring a Step>> :: Step configuration, different types of steps,
 controlling step flow.
-<<readersAndWriters.adoc#readersAndWriters,ItemReaders and ItemWriters>> :: Item readers
-and writers interfaces and how to use them.
-<<processor.adoc#processor,ItemProcessor>> :: Item processor interface and how to use it.
+<<readersAndWriters.adoc#readersAndWriters,Item reading and writing>> :: `ItemReader`
+and `ItemWriter` interfaces and how to use them.
+<<processor.adoc#itemProcessor,Item processing>> :: `ItemProcessor` interface and how to use it.
 <<scalability.adoc#scalability,Scaling and Parallel Processing>> :: Multi-threaded steps,
 parallel steps, remote chunking and partitioning.
 <<repeat.adoc#repeat,Repeat>> :: Completion policies and exception handling of repetitive actions.
