--- a/spring-batch-docs/asciidoc/monitoring-and-metrics.adoc
+++ b/spring-batch-docs/asciidoc/monitoring-and-metrics.adoc
@@ -20,14 +20,16 @@ link:$$https://micrometer.io/docs/concepts#_global_registry$$[Micrometer's globa
 under the `spring.batch` prefix. The following table explains all the metrics in details:
 
 |===============
-|__Metric Name__|__Type__|__Description__
-|`spring.batch.job`|`TIMER`|Duration of job execution
-|`spring.batch.job.active`|`LONG_TASK_TIMER`|Currently active jobs
-|`spring.batch.step`|`TIMER`|Duration of step execution
-|`spring.batch.item.read`|`TIMER`|Duration of item reading
-|`spring.batch.item.process`|`TIMER`|Duration of item processing
-|`spring.batch.chunk.write`|`TIMER`|Duration of chunk writing
+|__Metric Name__|__Type__|__Description__|__Tags__
+|`spring.batch.job`|`TIMER`|Duration of job execution|`name`, `status`
+|`spring.batch.job.active`|`LONG_TASK_TIMER`|Currently active jobs|`name`
+|`spring.batch.step`|`TIMER`|Duration of step execution|`name`, `job.name`, `status`
+|`spring.batch.item.read`|`TIMER`|Duration of item reading|`job.name`, `step.name`, `status`
+|`spring.batch.item.process`|`TIMER`|Duration of item processing|`job.name`, `step.name`, `status`
+|`spring.batch.chunk.write`|`TIMER`|Duration of chunk writing|`job.name`, `step.name`, `status`
 |===============
+
+NOTE: The `status` tag can be either `SUCCESS` or `FAILURE`.
 
 [[custom-metrics]]
 
