Improve code example in "Configuring and Running a Job" section
The sample that shows how to provide a custom transaction manager
via a BatchConfigurer has been updated to use the constructor
of `DefaultBatchConfigurer` that takes a DataSource.

Issue #3888

--- a/spring-batch-docs/asciidoc/job.adoc
+++ b/spring-batch-docs/asciidoc/job.adoc
@@ -449,8 +449,8 @@ example shows how to provide a custom transaction manager:
 [source, java]
 ----
 @Bean
-public BatchConfigurer batchConfigurer() {
-	return new DefaultBatchConfigurer() {
+public BatchConfigurer batchConfigurer(DataSource dataSource) {
+	return new DefaultBatchConfigurer(dataSource) {
 		@Override
 		public PlatformTransactionManager getTransactionManager() {
 			return new MyTransactionManager();
