--- a/spring-batch-docs/src/main/asciidoc/job.adoc
+++ b/spring-batch-docs/src/main/asciidoc/job.adoc
@@ -449,8 +449,8 @@ example shows how to provide a custom transaction manager:
 [source, java]
 ----
 @Bean
-public BatchConfigurer batchConfigurer() {
-	return new DefaultBatchConfigurer() {
+public BatchConfigurer batchConfigurer(DataSource dataSource) {
+	return new DefaultBatchConfigurer(dataSource) {
 		@Override
 		public PlatformTransactionManager getTransactionManager() {
 			return new MyTransactionManager();
